--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.3",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-qr-code": "^2.0.18",
